# Education-Statistics

./: .EduStat_qml-win64-single.exe.baiduyun.uploading.cfg  .gitignore  AGENTS.md  CLAUDE.md  README.md  TECH_STACK.md  index.html
EduStat/: CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  csvToXlsx.py  generate_test_xlsx.py  init.json  mainwindow.h  resources.qrc  scoredelegate.cpp  scoredelegate.h  sql_show.md  subjectcard.cpp  test.csv  test.xlsx  xlsxToCsv.py  开源代码与组件使用情况说明.md
EduStat/EduStat/: CMakeLists.txt  LICENSE  csvToXlsx.spec  flowlayout.cpp  init.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.txt  stdafx.h  subjectcard.cpp  subjectcard.h  teamCard.cpp  teamCard.h
EduStat_qml/: CLAUDE.md  CMakeLists.txt  VideoPlayer.cpp  agent_backend.cpp  agent_backend.h  api_client.cpp  api_client.h  chat_backend.cpp  chat_backend.h  main.cpp  run.sh  video_player_proxy.cpp  video_player_proxy.h
EduStat_qml/FluentUI/: plugins.qmltypes
EduStat_qml/qml_ui/: AddSubjectPage.qml  AnnouncementPage.qml  AssignmentPage.qml  ChatPage.qml  ClassInfoPage.qml  CountdownPage.qml  CourseApplicationPage.qml  LoginPage.qml  MessagePage.qml  ResourcePage.qml  RollCallPage.qml  StudentInfoPage.qml  SubjectManagePage.qml  TeamUpPage.qml  VideoPlayerPage.qml  main.qml  qtquickcontrols2.conf
EduStat_qml/tests/: CMakeLists.txt  test_api_client.cpp
FunASR/: asr.py
android/: README.md  pubspec.yaml
android/android/: settings.gradle.kts
android/android/app/: build.gradle.kts
android/android/app/src/main/: AndroidManifest.xml
android/android/app/src/main/kotlin/com/edu/edu/: MainActivity.kt
android/lib/: main.dart
android/lib/models/: announcement.dart  assignment.dart  course.dart  message.dart  score.dart  user.dart
android/lib/pages/: about_page.dart  announcement_page.dart  check_in_page.dart  countdown_page.dart  courses_page.dart  downloads_page.dart  home_page.dart  learning_report_page.dart  login_page.dart  messages_page.dart  my_homework_page.dart  notifications_page.dart  personal_info_page.dart  profile_page.dart  report_history_page.dart  roll_call_page.dart  student_analysis_page.dart  student_info_page.dart  submit_homework_page.dart  video_player_page.dart
android/lib/services/: api_client.dart  auth_provider.dart  report_service.dart
android/lib/theme/: app_theme.dart  responsive.dart
android/lib/widgets/: common_widgets.dart
android/linux/: CMakeLists.txt
android/linux/runner/: my_application.cc
android/test/: widget_test.dart
chat/: CMakeLists.txt  chat_client.cpp  chat_client.hpp  config.hpp  main.cpp
clientApi/: CMakeLists.txt  config.hpp  edu_client.cpp  edu_client.hpp  http_client.cpp  http_client.hpp  main.cpp  test_endpoints.cpp  types.hpp
database/: edu_server_database.sql  init.sql
intro/: 01-EduStat-README.md  01-EduStat-安装说明.md  02-数据库-设计文档.md  03-后端服务-规划.md  04-网络部署-API路由设计.md  04-网络部署-README.md  04-网络部署-edu-server说明.md  04-网络部署-实现计划.md  04-网络部署-架构.md
libc/FluentUI/: fluentuiplugin_qml_module_dir_map.qrc  qmldir
net_state/: cpp-client-guide.md  lib.md
net_state/edu_server/: .env.example  Dockerfile  README.md  database.py  deps.py  edu-server.service  main.py  models.py  requirements.txt  run.sh  schemas.py  security.py  setup.sh
net_state/edu_server/routers/: ai.py  announcements.py  assignments.py  attendance.py  auth.py  courses.py  files.py  messages.py  play_records.py  resources.py  scores.py  units.py  users.py  videos.py
net_state/edu_server/tests/: test_ai_router.py  test_all_routes.sh
net_state/nginx/: edu-server-https.conf  edu-server.conf
player/: CMakeLists.txt  VideoPlayer.h  main.cpp  test_mute.cpp
routing/: README.md  main.py
routing/edu_server/: database.py  deps.py  main.py  models.py  schemas.py  security.py
routing/edu_server/routers/: auth.py  courses.py  play_records.py  users.py  videos.py
